# twoyi

.github/workflows/: main.yml
app/: build.gradle
app/rs/: Cargo.toml  build_rs.sh
app/rs/src/: input.rs  lib.rs
app/src/main/: AndroidManifest.xml
app/src/main/java/io/twoyi/: TwoyiApplication.java  TwoyiEngineService.java
app/src/main/java/io/twoyi/ui/: PermissionActivity.java
