[package]
name = "twoyi"
version = "0.6.0"
edition = "2021"
publish = false

[lib]
name = "twoyi"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
log = "0.4"
android_logger = "0.13"
libc = "0.2"
once_cell = "1.18"
unix_socket = "0.5.0"
# Using ndk 0.9.0 without explicit features to avoid the selection error.
# The default features in 0.9.0 include native_window and input support.
ndk = "0.9.0"
ndk-sys = "0.5.0"
