[package]
name = "twoyi"
version = "0.6.0"
edition = "2021"
publish = false

[lib]
name = "twoyi"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
log = "0.4"
android_logger = "0.13"
libc = "0.2"
once_cell = "1.18"
unix_socket = "0.5.0"
# ndk 0.9.0 depends on ndk-sys 0.6.0. We let it manage the sys crate.
ndk = { version = "0.9.0", features = ["nativewindow", "input"] }
